# wbc

./: .gitignore  Cargo.toml
data/: drivers.csv  events.csv  guesses.csv  results.csv
src/: api.rs  controllers.rs  main.rs  models.rs  routes.rs  store.rs
static/: site.webmanifest  style.css
templates/: base.html.tera  bet.html.tera  disclaimer.html.tera  history.html.tera  index.html.tera  latest.html.tera  login.html.tera  play.html.tera  profile.html.tera  register.html.tera  rules.html.tera  stats.html.tera
